[package]
name = "loudspin"
version = "0.1.2"
edition = "2018"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]
description = "Hard disk loudness controller (thin wrapper around hdparm -M)"
repository = "https://github.com/dmnsafonov/loudspin"
readme = "README.md"
keywords = ["AAM", "Automatic Acoustic Management", "hdd loudness", "hdparm"]
license = "GPL-3.0-only"

[dependencies]
boolean-enums = "^0.3.3"
capabilities = "^0.3.0"
clap = "^2.32.0"
env_logger = "^0.6.1"
failure = "^0.1.1"
glob = "^0.3.0"
libc = "0.2.33"
log = "^0.4.3"
serde = "^1.0.19"
serde_derive = "^1.0.19"
toml = "^0.5.0"

[badges]
travis-ci = { repository = "dmnsafonov/loudspin" }
