[package]
name = "loudspin"
version = "0.1.3"
edition = "2018"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]
description = "Hard disk loudness controller (thin wrapper around hdparm -M)"
repository = "https://github.com/dmnsafonov/loudspin"
readme = "README.md"
keywords = ["AAM", "Automatic Acoustic Management", "hdd loudness", "hdparm"]
license = "GPL-3.0-only"

[dependencies]
boolean-enums = "^0.3.3"
capabilities = "^0.3.0"
clap = "^2.33.0"
env_logger = "^0.6.2"
failure = "^0.1.5"
glob = "^0.3.0"
libc = "0.2.60"
log = "^0.4.7"
serde = "^1.0.97"
serde_derive = "^1.0.97"
toml = "^0.5.1"

[badges]
travis-ci = { repository = "dmnsafonov/loudspin" }
