[package]
name = "loudspin"
version = "0.1.4"
edition = "2018"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]
description = "Hard disk loudness controller (thin wrapper around hdparm -M)"
repository = "https://github.com/dmnsafonov/loudspin"
readme = "README.md"
keywords = ["AAM", "Automatic Acoustic Management", "hdd loudness", "hdparm"]
license = "GPL-3.0-only"

[dependencies]
boolean-enums = "^0.3.3"
capabilities = "^0.3.0"
clap = "^2.33.0"
env_logger = "^0.7.1"
failure = "^0.1.6"
glob = "^0.3.0"
libc = "0.2.65"
log = "^0.4.8"
serde = "^1.0.102"
serde_derive = "^1.0.102"
toml = "^0.5.5"

[badges]
travis-ci = { repository = "dmnsafonov/loudspin" }
